fix spacing and arrange interface properly

--- a/css/battleship.css
+++ b/css/battleship.css
@@ -1,11 +1,12 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,700);
 
 .chat-box {
-  position: absolute;
+  /*position: absolute;*/
   height: 335px;
   bottom:30px;
+  margin-top: 30px;
   left:2%;
-  width:96%;
+  width:100%;
   border: 2px solid #73B1B7;
   border-radius: 10px;
 }
@@ -133,16 +134,16 @@ html {
 
 .panel {
   /*float: right;*/
-  position: absolute;
+  /*position: absolute;*/
   width: 755px;
-  height: 275px;
+  height: 175px;
 
   /*margin-top: 25px;*/
 }
 
 .topPanel {
   width: 45%;
-  height: 350px;
+  height: 100%;
   border: 2px solid #73B1B7;
   border-radius: 10px;
   display: inline-block;
@@ -155,7 +156,7 @@ html {
 .console {
   /*position: relative;*/
   width: 47%;
-  height: 350px;
+  height: 100%;
   display: inline;
   float:right;
   background: rgba(144,144,144,0.6);
